diesel_compile_tests/tests/fail/derive/no_table.stderr
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `users`
 --> tests/fail/derive/no_table.rs:5:8
  |
5 | struct User {
  |        ^^^^ use of unresolved module or unlinked crate `users`
  |
  = help: if you wanted to use a crate named `users`, use `cargo add users` to add it to your `Cargo.toml`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `users`
  --> tests/fail/derive/no_table.rs:11:23
   |
11 | #[diesel(table_name = users)]
   |                       ^^^^^ use of unresolved module or unlinked crate `users`
   |
   = help: if you wanted to use a crate named `users`, use `cargo add users` to add it to your `Cargo.toml`
